# hamt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  setup.py  setup.sh
.circleci/: config.yml
doc/: main.bbl
doc/jupyter/: FEM_1d.ipynb  FEM_1d_cy.ipynb  FEM_2d.ipynb  FEM_volumetric_heat_source.ipynb  Test_r-symmetry.ipynb  correct.ipynb  new.ipynb  r-symetry cyl coord.ipynb  r-symetry.ipynb  r-symmetry.ipynb  radiation.ipynb
doc/latex/: compile.sh  heat_transfer.tex  library.bib  main.tex  numerics.tex  numerics_old.tex
examples-pybind11/FMMR/: FMMR.msh  FMMR.py
examples-pybind11/NTR/: input.py
examples-pybind11/cartesian_two_block/: test.py
pybind11/: CMakeLists.txt  main.cc  setup.py
pybind11/pyhamt/: __init__.py
scripts/: script.py
src/: CMakeLists.txt  main.cc
src/common/: constants.h  timer.cc  timer.h
src/exception/: commanderror.cc  commanderror.h  exception.cc  exception.h  incomplete_code_error.cc  incomplete_code_error.h  load_pass.cc  load_pass.h
src/hamt/: data.cc  data.h  hamt.cc  hamt.h
src/io/: reader.cc  reader.h  writer.cc  writer.h
src/io/gmsh/: gmsh.cc  gmsh.h  msh2.cc  msh2.h
src/io/parser/: controller.cc  controller.h  core.cc  core.h  operation.cc  operation.h
src/io/vtk/: unstructured_grid.cc  unstructured_grid.h
src/mesh/: mesh2d_regular.cc  mesh2d_regular.h  mesh2d_triangular.cc  mesh2d_triangular.h  mesh_algorithms.cc  mesh_algorithms.h
src/parser/: controller.cc  controller.h  operation.cc  operation.h  parser.cc  parser.h  sub_operation.cc  sub_operation.h
src/parser/opr_clear/: operation_clear.cc  operation_clear.h
src/parser/opr_info/: operation_info.cc  operation_info.h
src/parser/opr_load/: operation_load.cc  operation_load.h
src/parser/opr_read/: operation_read.cc  operation_read.h
src/parser/opr_run/: operation_run.cc  operation_run.h
src/parser/opr_set/: operation_set.cc  operation_set.h  set_boundary.cc  set_boundary.h  set_reg_mesh.cc  set_reg_mesh.h  set_solver.cc  set_solver.h  set_surface.cc  set_surface.h  set_trinagl_mesh.cc  set_trinagl_mesh.h  set_writer.cc  set_writer.h
src/solver/: heat_equation.cc  heat_equation.h  solver.cc  solver.h
src/solver/heat_equation/: homogeneous.cc  homogeneous.h
test/: CMakeLists.txt
test/thermal/: CMakeLists.txt  main.cc
test/unit_tests/: CMakeLists.txt  main.cc
test/unit_tests/io/gmsh/: gmsh.h
test/unit_tests/io/gmsh/test_data/: test_domain.geo  test_domain_msh2.msh
test/unit_tests/mesh/: mesh2d_regular.h  mesh_algorithms.h
test/unit_tests/mesh/test_data/: block_2.geo  block_2.msh  block_3.geo  block_3.msh
test/unit_tests/solver/heat_equation/: homogeneous.h
test/vtk/: CMakeLists.txt  main.cc
(+144 files in other folders)
